Fixing id guide image size issue on mobile devices

--- a/assets/css/dev.css
+++ b/assets/css/dev.css
@@ -61,3 +61,8 @@ body.authenticated .if-anonymous {
 body.anonymous .if-authenticated {
     display: none;
 }
+
+/* Images on guide page were too wide on mobile devices */
+.guide-figure img {
+    max-width: 100%;
+}
